Update Crowdin translations (#699)

--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -479,6 +479,10 @@
     "message": "Nuova finestra privata",
     "description": "New private window"
   },
+  "commandLabelEnterFullscreen": {
+    "message": "Attiva la modalità a pieno schermo",
+    "description": "Enter full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "Sposta la scheda all'inizio",
     "description": "Move tab to start"
@@ -830,6 +834,10 @@
   "commandDescriptionNewPrivateWindow": {
     "message": "Apre una nuova finestra privata vuota.",
     "description": "Opens a new empty private window."
+  },
+  "commandDescriptionEnterFullscreen": {
+    "message": "Attiva la modalità a schermo intero per la finestra corrente.",
+    "description": "Activates full screen mode for the current window."
   },
   "commandDescriptionMoveTabToStart": {
     "message": "Sposta la scheda corrente all'inizio della barra delle schede.",
