--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -479,6 +479,10 @@
     "message": "Новое приватное окно",
     "description": "New private window"
   },
+  "commandLabelEnterFullscreen": {
+    "message": "Перейти в полноэкранный режим",
+    "description": "Enter full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "Переместить вкладку в начало",
     "description": "Move tab to start"
@@ -830,6 +834,10 @@
   "commandDescriptionNewPrivateWindow": {
     "message": "Открывает новое пустое приватное окно.",
     "description": "Opens a new empty private window."
+  },
+  "commandDescriptionEnterFullscreen": {
+    "message": "Включает полноэкранный режим для текущего окна.",
+    "description": "Activates full screen mode for the current window."
   },
   "commandDescriptionMoveTabToStart": {
     "message": "Перемещает текущую вкладку в начало полосы вкладок.",
