--- a/src/_locales/sv_SE/messages.json
+++ b/src/_locales/sv_SE/messages.json
@@ -479,6 +479,10 @@
     "message": "Nytt privat fönster",
     "description": "New private window"
   },
+  "commandLabelEnterFullscreen": {
+    "message": "Helskärmsläge",
+    "description": "Enter full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "Flytta flik till början",
     "description": "Move tab to start"
@@ -830,6 +834,10 @@
   "commandDescriptionNewPrivateWindow": {
     "message": "Öppnar ett nytt tomt privat fönster.",
     "description": "Opens a new empty private window."
+  },
+  "commandDescriptionEnterFullscreen": {
+    "message": "Aktiverar helskärmsläge för det aktuella fönstret.",
+    "description": "Activates full screen mode for the current window."
   },
   "commandDescriptionMoveTabToStart": {
     "message": "Flyttar den aktuella fliken till början av flikremsan.",
