--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -479,6 +479,10 @@
     "message": "新增隱私視窗",
     "description": "New private window"
   },
+  "commandLabelEnterFullscreen": {
+    "message": "進入全螢幕模式",
+    "description": "Enter full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "移動分頁至開端",
     "description": "Move tab to start"
@@ -830,6 +834,10 @@
   "commandDescriptionNewPrivateWindow": {
     "message": "開啟一個空的隱私瀏覽視窗",
     "description": "Opens a new empty private window."
+  },
+  "commandDescriptionEnterFullscreen": {
+    "message": "將當下使用的視窗切換為全螢幕模式",
+    "description": "Activates full screen mode for the current window."
   },
   "commandDescriptionMoveTabToStart": {
     "message": "將目前的分頁移動至分頁列的開端",
