--- a/src/_locales/fi_FI/messages.json
+++ b/src/_locales/fi_FI/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Navigoi, käytä ja selaa nopeammin hiirieleillä! Muokattavissa oleva hiirielelaajennus useilla erilaisilla komennoilla.",
+    "message": "Navigoi, ohjaa ja selaa nopeammin hiirieleillä! Muokattavissa oleva hiirielelaajennus useilla erilaisilla komennoilla.",
     "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
@@ -479,6 +479,10 @@
     "message": "Uusi yksityinen ikkuna",
     "description": "New private window"
   },
+  "commandLabelEnterFullscreen": {
+    "message": "Siirry koko näytön tilaan",
+    "description": "Enter full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "Siirrä välilehti palkin alkuun",
     "description": "Move tab to start"
@@ -608,7 +612,7 @@
     "description": "Open custom URL in new private window"
   },
   "commandLabelInsertCustomText": {
-    "message": "Insert custom text",
+    "message": "Lisää oma teksti",
     "description": "Insert custom text"
   },
   "commandLabelPasteClipboard": {
@@ -831,6 +835,10 @@
     "message": "Avaa uuden tyhjän yksityisen ikkunan.",
     "description": "Opens a new empty private window."
   },
+  "commandDescriptionEnterFullscreen": {
+    "message": "Aktivoi koko näytön tilan nykyiselle ikkunalle.",
+    "description": "Activates full screen mode for the current window."
+  },
   "commandDescriptionMoveTabToStart": {
     "message": "Siirtää nykyisen välilehden välilehtipalkin vasempaan reunaan, kinnitettyjen välilehtien oikealle puolelle.",
     "description": "Moves the current tab to the start of the tab strip."
@@ -960,11 +968,11 @@
     "description": "Opens the specified URL in a new private window."
   },
   "commandDescriptionInsertCustomText": {
-    "message": "Inserts the specified text at the caret position of the input element on which the gesture started.",
+    "message": "Lisää määritetyn tekstin tekstinsyötön osoittimen kohdalle siihen syöttöelementtiin, josta ele alkoi.",
     "description": "Inserts the specified text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionPasteClipboard": {
-    "message": "Lisää leikepöydän tekstin tekstinsyötön kursorin kohdalle siihen syöttöelementtiin, josta ele alkoi.",
+    "message": "Lisää leikepöydän tekstin tekstinsyötön osoittimen kohdalle siihen syöttöelementtiin, josta ele alkoi.",
     "description": "Inserts the current clipboard text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionOpenURLFromClipboard": {
@@ -1168,7 +1176,7 @@
     "description": "Custom URL"
   },
   "commandSettingLabelCustomText": {
-    "message": "Custom text",
+    "message": "Oma teksti",
     "description": "Custom text"
   },
   "commandSettingLabelAddonId": {
@@ -1360,7 +1368,7 @@
     "description": "The URL that should be opened."
   },
   "commandSettingDescriptionCustomText": {
-    "message": "The text or symbols that should be inserted.",
+    "message": "Lisättävä teksti tai symbolit.",
     "description": "The text or symbols that should be inserted."
   },
   "commandSettingDescriptionAddonId": {
