--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -479,6 +479,10 @@
     "message": "Nova janela privada",
     "description": "New private window"
   },
+  "commandLabelEnterFullscreen": {
+    "message": "Entrar no modo ecrã inteiro",
+    "description": "Enter full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "Mover separador para o início",
     "description": "Move tab to start"
@@ -608,7 +612,7 @@
     "description": "Open custom URL in new private window"
   },
   "commandLabelInsertCustomText": {
-    "message": "Insert custom text",
+    "message": "Inserir texto personalizado",
     "description": "Insert custom text"
   },
   "commandLabelPasteClipboard": {
@@ -831,6 +835,10 @@
     "message": "Abre uma nova janela privada vazia.",
     "description": "Opens a new empty private window."
   },
+  "commandDescriptionEnterFullscreen": {
+    "message": "Ativa o modo de ecrã inteiro para a janela atual.",
+    "description": "Activates full screen mode for the current window."
+  },
   "commandDescriptionMoveTabToStart": {
     "message": "Move o separador atual para o início da barra de separadores.",
     "description": "Moves the current tab to the start of the tab strip."
@@ -960,7 +968,7 @@
     "description": "Opens the specified URL in a new private window."
   },
   "commandDescriptionInsertCustomText": {
-    "message": "Inserts the specified text at the caret position of the input element on which the gesture started.",
+    "message": "Insere o texto especificado na posição atual do cursor da caixa de texto onde o gesto foi iniciado.",
     "description": "Inserts the specified text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionPasteClipboard": {
@@ -1168,7 +1176,7 @@
     "description": "Custom URL"
   },
   "commandSettingLabelCustomText": {
-    "message": "Custom text",
+    "message": "Texto personalizado",
     "description": "Custom text"
   },
   "commandSettingLabelAddonId": {
@@ -1332,7 +1340,7 @@
     "description": "Determines if the tabs should be cycled through in a loop."
   },
   "commandSettingDescriptionExcludeDiscarded": {
-    "message": "Determines whether tabs that are not loaded should be ignored.",
+    "message": "Determina se separadores não carregados devem ser ignorados.",
     "description": "Determines whether tabs that are not loaded should be ignored."
   },
   "commandSettingDescriptionOpenEmptyTab": {
@@ -1360,7 +1368,7 @@
     "description": "The URL that should be opened."
   },
   "commandSettingDescriptionCustomText": {
-    "message": "The text or symbols that should be inserted.",
+    "message": "O texto ou símbolos que devem ser inseridos.",
     "description": "The text or symbols that should be inserted."
   },
   "commandSettingDescriptionAddonId": {
