Minor change in tab shift description

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1429,8 +1429,8 @@
     "description": "Determines if the currently active tab should be included."
   },
   "commandSettingDescriptionTabShift": {
-    "message": "Determines by how many positions the tab should be moved.",
-    "description": "Determines by how many positions the tab should be moved."
+    "message": "Determines by how many places the tab should be moved.",
+    "description": "Determines by how many places the tab should be moved."
   },
   "commandSettingDescriptionNewWindowFocus": {
     "message": "Determines if the opened window should gain focus or not.",
